<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorPrimaryDark"
              android:orientation="vertical"
              android:padding="10dp"
              tools:context="partridge.nathan.movienight.fragments.AboutDialogFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/sort_background"
        android:textSize="36sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/author_label"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_marginStart="10dp"
        android:text="@string/author"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="18sp"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="117dp"
        android:layout_height="89dp"
        android:adjustViewBounds="true"
        android:contentDescription="powred by THE MOVIE DB"
        android:cropToPadding="true"
        android:src="@drawable/ic_powered_by_green"/>

</LinearLayout>
