<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/media_list"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/sort_background"
        android:orientation="vertical">


        <ProgressBar
            android:id="@+id/list_progress"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:id="@+id/sort_order_selection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/sort_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/sort_field_label"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <Spinner
                android:id="@+id/sort_by"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="6"/>

            <ImageButton
                android:id="@+id/sort_direction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/sort_dir_descr"
                android:src="@drawable/sort_ascending"/>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/paging_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/fisrt_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/prev_page"
                android:contentDescription="@string/goto_first_page"
                android:src="@drawable/page_first"/>

            <ImageButton
                android:id="@+id/prev_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/paging_text"
                android:contentDescription="@string/goto_previous_page"
                android:src="@drawable/chevron_left"/>

            <TextView
                android:id="@+id/paging_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                tools:text="Page 1 of 10"/>

            <ImageButton
                android:id="@+id/next_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/paging_text"
                android:contentDescription="@string/goto_next_page"
                android:src="@drawable/chevron_right"/>

            <ImageButton
                android:id="@+id/imageButton4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/next_page"
                android:contentDescription="@string/goto_last_page"
                android:src="@drawable/page_last"/>
        </RelativeLayout>
    </LinearLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/list"
        android:name="partridge.nathan.movienight.Fragments.MediaListFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layoutManager="LinearLayoutManager"
        tools:context="partridge.nathan.movienight.fragments.MediaListFragment"
        tools:listitem="@layout/fragment_medialist">

    </android.support.v7.widget.RecyclerView>
</LinearLayout>

