<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/list_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="5dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:textSize="16sp"
        tools:text="The Show Name"/>

    <RatingBar
        android:id="@+id/ratingBar"
        style="@style/Widget.AppCompat.RatingBar.Indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/title"
        android:numStars="10"
        android:rating="2.5"
        android:stepSize=".25"/>


    <TextView
        android:id="@+id/vote_count_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/ratingBar"
        android:layout_marginEnd="5dp"
        android:text="@string/count_label"
        android:textAlignment="viewStart"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/vote_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ratingBar"
        android:layout_toEndOf="@id/vote_count_label"
        android:textAlignment="viewStart"
        tools:text="300"/>

    <TextView
        android:id="@+id/popularity_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ratingBar"
        android:layout_marginEnd="5dp"
        android:layout_toStartOf="@id/popularity"
        android:text="@string/popularity"
        android:textAlignment="textEnd"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/popularity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/ratingBar"
        tools:text="5845"/>


    <TextView
        android:id="@+id/date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/vote_count"
        android:layout_marginEnd="5dp"
        android:textStyle="bold"
        tools:text="@string/airdate"/>

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vote_count"
        android:layout_toEndOf="@+id/date_label"
        tools:text="12-22-2017"/>


    <TextView
        android:id="@+id/revenue_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/vote_count"
        android:layout_marginEnd="5dp"
        android:layout_toStartOf="@id/revenue"
        android:text="@string/revenue"
        android:textAlignment="viewEnd"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/revenue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/vote_count"
        android:textAlignment="viewStart"
        tools:text="10000000"/>

</RelativeLayout>
